--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,18 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.ear
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+bin
+HelveticaNeue.ttf
+HelveticaNeueUltraLight.ttf
+*.html
+libs/commons-lang3-3.1/apidocs
+
+# Eclipse stuff #
+.classpath
+.project
+.settings
